<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardActivity">

    <Button
        android:id="@+id/highestScoreButton"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/highest_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mostScansButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mostScansButton"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/most_scans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greatestSumButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/highestScoreButton" />

    <Button
        android:id="@+id/greatestSumButton"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/greatest_sum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mostScansButton" />

    <TextView
        android:id="@+id/leadboardTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboard"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choosePromptTextView"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:text="Choose a Statistic"
        android:textColor="#DC0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leadboardTextView" />

    <ListView
        android:id="@+id/leadboardListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/mostScansButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leadboardTextView"
        app:layout_constraintVertical_bias="0.214">

    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>